[gd_scene load_steps=5 format=3 uid="uid://c12y1ndlgnic"]

[ext_resource type="PackedScene" uid="uid://dj2oj5webhh2d" path="res://scenes/character_nodes/card_node.tscn" id="1_akq3d"]
[ext_resource type="Script" uid="uid://cx8g1ux7km68q" path="res://scenes/character_nodes/character_card_node.gd" id="2_xpdbf"]
[ext_resource type="Texture2D" uid="uid://dwml75ke6tmjk" path="res://assets/hp_bar.png" id="3_2is0u"]
[ext_resource type="Script" uid="uid://bdxu2jhwsedik" path="res://scenes/character_nodes/status_effects.gd" id="4_gawpc"]

[node name="CharacterCardNode" instance=ExtResource("1_akq3d")]
script = ExtResource("2_xpdbf")
card = null

[node name="Title" type="Label" parent="." index="2"]
custom_minimum_size = Vector2(62, 16)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -47.0
offset_right = 31.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/paragraph_spacing = 0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 6
text = "Sikerler"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpBar" type="Sprite2D" parent="." index="3"]
position = Vector2(15, 32)
texture = ExtResource("3_2is0u")

[node name="Health" type="Label" parent="HpBar" index="0"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -46.0
offset_right = -24.0
offset_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.96, 0.8928, 0.89392, 1)
theme_override_colors/font_outline_color = Color(0.529412, 0.152941, 0.152941, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "31"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHealth" type="Label" parent="HpBar" index="1"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.53125
anchor_top = 0.5
anchor_right = 0.90625
anchor_bottom = 0.8125
offset_left = -16.0
offset_top = -16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "31"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StatusEffects" type="GridContainer" parent="." index="4"]
custom_minimum_size = Vector2(16, 16)
layout_direction = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_top = 35.0
offset_right = 38.0
offset_bottom = 71.0
grow_horizontal = 2
columns = 4
script = ExtResource("4_gawpc")
